Fri Aug 11 07:17:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/svn/config:
        * docs/svn/svn-prefs.reg:
          Added settings for .idl and .pidl

Thu Aug 10 13:14:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Disabled the performance tests on OpenVMS for the moment, they
          result in too much error logs

Thu Aug 10 10:33:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/taoidldefaults.mpb:
          Updated for -GX

Thu Aug 10 09:38:13 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * bin/tao_other_tests.lst:

          Exclude Bug_2615_Regression from running on 'ACE for TAO' builds.

Thu Aug 10 01:52:34 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/config-aix-4.x.h: Added ACE_HAS_TEMPLATE_TYPEDEFS for Visual
          Age C++ 6 and higher.

Wed Aug  9 14:15:18 UTC 2006  Ciju John  <johnc@ociweb.com>

        * bin/MakeProjectCreator/config/csd_threadpool.mpb:

          Added a dependency upon threads.mpb as this project shouldn't be
          built if thread support is not going to be built into TAO.

Wed Aug  9 13:45:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * bin/MakeProjectCreator/config/acedefaults.mpb

          Typo, Remove the + character that came with the patch file.

Wed Aug  9 12:17:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * bin/MakeProjectCreator/config/ace_opt_mfc.mpb
        * bin/MakeProjectCreator/config/acedefaults.mpb

          Chad's new fix for MPC building MFC projects.

Tue Aug  8 14:00:06 UTC 2006  Carlos O'Ryan  <coryan@atdesk.com>

        * Merged in all the changes from the fix_bug_2540 branch, that is,
          from revision 73857 to revision 73859.

        Thu Aug  3 21:49:27 UTC 2006  Carlos O'Ryan  <coryan@atdesk.com>

        * ace/TP_Reactor.cpp:
        * ace/Select_Reactor_T.cpp: