@@ -1,5 +1,6 @@
 #include "ace/CDR_Size.h"
 #include "ace/SString.h"
+#include "ace/OS_Memory.h"
 
 #if !defined (__ACE_INLINE__)
 # include "ace/CDR_Size.inl"
