@@ -36,6 +36,10 @@
 #   endif
 # endif /* (__GNUC__ > 3 || (__GNUC__ == 3 && __GNUC_MINOR__ >= 3)) */
 
+#elif defined (__DCC__)
+
+// To be added
+
 #else  /* ! __GNUG__ && ! ghs && !__DCC__ */
 #  ifdef __cplusplus  /* Let it slide for C compilers. */
 #    error unsupported compiler on VxWorks
